--- a/source/partials/_nav-version-control-deployments.html.erb
+++ b/source/partials/_nav-version-control-deployments.html.erb
@@ -1,5 +1,7 @@
 <ul>
   <li><a href="/standards/source-code/index.html">How to store source code</a></li>
+  <li><a href="/standards/source-code/use-github.html">Use GitHub</a></li>
+  <li><a href="/standards/source-code/working-with-git.html">Working with git</a></li>
   <li><a href="/standards/pull-requests.html">Using Pull Requests</a></li>
   <li><a href="/manuals/readme-guidance.html">Writing READMEs</a></li>
   <li><a href="/manuals/release-notes.html">Writing release notes</a></li>
