--- a/source/standards/source-code/index.html.md.erb
+++ b/source/standards/source-code/index.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: How to store source code
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-03-04
 review_in: 12 months
 ---
 
@@ -13,9 +13,11 @@ At MHCLG, we follow the principles set out in the Service Manual for managing th
 
 ## Publish open source code
 
-Wherever possible, we make our source code open and reusable. This means other government departments and people in outside organisations can benefit from our work.
+Wherever possible, we make our source code open and reusable. This means other government departments and people in
+outside organisations can benefit from our work.
 
-It’s not always appropriate to open code. There are sometimes grounds for [keeping some data and code closed][], for example:
+It’s not always appropriate to open code. There are sometimes grounds for [keeping some data and code closed][], for
+example:
 
 - keys and credentials
 - algorithms used to detect fraud
@@ -28,7 +30,7 @@ When you publish open source code, your project must:
 * include a README, using [guidance for writing a README][]
 * have useful and informative commit messages about why a change was made
 * provide a changelog, for example the [specification for CPAN Changes files][]
-* include an [MIT and OGL licence file][]
+* include an [MIT and/or OGL licence file][]
 * link to a public list of known issues and bugs, for example [GOV.UK Frontend issues][]
 * have an email address to submit security related bug reports
 * list a version number compatible with [Semantic Versioning][]
@@ -36,7 +38,7 @@ When you publish open source code, your project must:
 Your open source code project should:
 
 * publish packages to relevant language specific repositories such as [PyPI - the Python Package Index][] or [RubyGems][]
-* post contributors' guidelines in a contributing file, like the [Go repository][]
+* post contributors’ guidelines in [a contributing file][]
 * set up any tests to run in a public continuous integration environment using tools such as [Github Actions](use-github.html#using-github-actions-and-workflows)
 
 You could also provide a mailing list so people can discuss your project.
@@ -47,12 +49,12 @@ You could also provide a mailing list so people can discuss your project.
 * [Working with Git](working-with-git.html)
 
 [GOV.UK Frontend]: https://github.com/alphagov/govuk-frontend
-[MIT and OGL licence file]: /manuals/licensing.html
+[MIT and/or OGL licence file]: /manuals/licensing.html
 [Specification for CPAN Changes files]: https://metacpan.org/pod/CPAN::Changes::Spec
 [Semantic Versioning]: https://semver.org/spec/v2.0.0.html
 [PyPI - the Python Package Index]: https://pypi.org/
 [RubyGems]: https://rubygems.org/
-[Go repository]: https://golang.org/CONTRIBUTORS
+[a contributing file]: https://github.com/cezaraugusto/github-template-guidelines/blob/master/.github/CONTRIBUTORS.md
 [keeping some data and code closed]: https://www.gov.uk/government/publications/open-source-guidance/when-code-should-be-open-or-closed
 [how to open previously closed code and your responsibilities for maintaining open code]: https://www.gov.uk/service-manual/technology/making-source-code-open-and-reusable
 [Go repository]: https://golang.org/CONTRIBUTORS
