--- a/source/standards/source-code/index.html.md.erb
+++ b/source/standards/source-code/index.html.md.erb
@@ -27,21 +27,22 @@ The Service Manual explains [how to open previously closed code and your respons
 
 When you publish open source code, your project must:
 
-* include a README, using [guidance for writing a README][]
+* include a `README`, using [guidance for writing a README][]
+* include a `SECURITY.md` file detailing [how to submit security related bug reports][]
 * have useful and informative commit messages about why a change was made
-* provide a changelog, for example the [specification for CPAN Changes files][]
 * include an [MIT and/or OGL licence file][]
-* link to a public list of known issues and bugs, for example [GOV.UK Frontend issues][]
-* have an email address to submit security related bug reports
+
+For projects intended for use by other people, your project should also:
+
+* provide a changelog, for example the [specification for CPAN Changes files][]
 * list a version number compatible with [Semantic Versioning][]
-
-Your open source code project should:
-
+* link to a public list of known issues and bugs, for example [GOV.UK Frontend issues][]
 * publish packages to relevant language specific repositories such as [PyPI - the Python Package Index][] or [RubyGems][]
+
+If your project accepts contributions from the public, your project should also:
+
 * post contributors’ guidelines in [a contributing file][]
 * set up any tests to run in a public continuous integration environment using tools such as [Github Actions](use-github.html#using-github-actions-and-workflows)
-
-You could also provide a mailing list so people can discuss your project.
 
 ## See also
 
@@ -54,9 +55,10 @@ You could also provide a mailing list so people can discuss your project.
 [Semantic Versioning]: https://semver.org/spec/v2.0.0.html
 [PyPI - the Python Package Index]: https://pypi.org/
 [RubyGems]: https://rubygems.org/
-[a contributing file]: https://github.com/cezaraugusto/github-template-guidelines/blob/master/.github/CONTRIBUTORS.md
+[a contributing file]: https://github.com/cezaraugusto/github-template-guidelines/blob/master/.github/CONTRIBUTING.md
 [keeping some data and code closed]: https://www.gov.uk/government/publications/open-source-guidance/when-code-should-be-open-or-closed
 [how to open previously closed code and your responsibilities for maintaining open code]: https://www.gov.uk/service-manual/technology/making-source-code-open-and-reusable
 [Go repository]: https://golang.org/CONTRIBUTORS
 [guidance for writing a README]: /manuals/readme-guidance.html
+[how to submit security related bug reports]: https://docs.github.com/en/code-security/getting-started/adding-a-security-policy-to-your-repository
 [GOV.UK Frontend issues]: https://github.com/alphagov/govuk-frontend/issues
