Update "see also" link to new tagging location

--- a/source/standards/hosting.html.md.erb
+++ b/source/standards/hosting.html.md.erb
@@ -14,5 +14,5 @@ We follow the [Government Cloud First policy](https://www.gov.uk/guidance/govern
 
 * [MHCLG Cloud Platform Teams](https://mhclg.sharepoint.com/sites/CloudPlatforms/SitePages/Principles.aspx)
 * [Working with AWS accounts](/manuals/working-with-aws-accounts.html)
-* [Tagging AWS resources](/manuals/aws-tagging.html)
+* [Tagging AWS resources](/standards/cloud-tagging.html)
 * [Use configuration management](/standards/configuration-management.html)
