--- a/source/partials/_nav-hosting-infrastructure.html.erb
+++ b/source/partials/_nav-hosting-infrastructure.html.erb
@@ -4,6 +4,6 @@
   <li><a href="/standards/configuration-management.html">Use configuration management</a></li>
   <li><a href="/standards/web-application-firewall.html">Use a web application firewall (WAF)</a></li>
   <li><a href="/manuals/security-overview-for-websites.html">Security overview for websites</a></li>
-  <li><a href="/standards/cloud-tagging.html">Tagging AWS resources</a></li>
+  <li><a href="/standards/cloud-tagging.html">Tagging cloud resources</a></li>
   <li><a href="/manuals/working-with-aws-accounts.html">Working with AWS accounts</a></li>
 </ul>
