--- a/source/manuals/working-with-aws-accounts.html.md.erb
+++ b/source/manuals/working-with-aws-accounts.html.md.erb
@@ -87,7 +87,9 @@ role_arn=arn:aws:iam::345678901234:role/developer
 You can execute commands with credentials stored in AWS Vault using the `aws-vault exec` command.
 For example, to list S3 buckets in the developer account run:
 
-
+```
+aws-vault exec developer -- aws s3 ls
+```
 
 [Amazon Web Services (AWS)]: https://aws.amazon.com/
 [process called assuming roles]: https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_use_switch-role-console.html
