add more specific links

--- a/source/manuals/working-with-aws-accounts.html.md.erb
+++ b/source/manuals/working-with-aws-accounts.html.md.erb
@@ -10,7 +10,7 @@ Many teams in MHCLG use [Amazon Web Services (AWS)](https://aws.amazon.com/) as 
 ## Request AWS user access
 
 People joining MHCLG do not automatically have access to [Amazon Web Services
-(AWS)][]. To grant a user access to AWS you’ll need to follow the guidance on the [Cloud Platforms Sharepoint site].
+(AWS)][]. To grant a user access to AWS you’ll need to follow the guidance (How to Request an AWS User Account)[https://mhclg.sharepoint.com/sites/CloudPlatforms/SitePages/AWS-IAM-Account-Request.aspx]
 
 ###  Use the command line
 
@@ -106,7 +106,6 @@ aws-vault exec developer -- aws s3 ls
 [AWS CLI documentation]: https://docs.aws.amazon.com/cli/latest/reference/sts/assume-role.html
 [Creating an AWS credentials file]: #creating-an-aws-credentials-file
 [aws-vault]: https://github.com/99designs/aws-vault#readme
-[gds-cli]: https://github.com/alphagov/gds-cli
 [maximum session duration]: https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_use.html#id_roles_use_view-role-max-session
 [team specific roles]: https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_use_switch-role-console.html
 
@@ -124,7 +123,7 @@ More information on the account types available is on the [Cloud Platforms Share
 
 ### Request an account
 
-To request an AWS account follow the guidance on the [Cloud Platforms Sharepoint site].
+To request an AWS account follow the guidance [How to Request an AWS Account](https://mhclg.sharepoint.com/sites/CloudPlatforms/SitePages/How-to-Request-AWS-Service-Account.aspx).
 
 
 [Amazon Web Services (AWS)]: https://aws.amazon.com/
