Update the slack channel in the README

--- a/source/manuals/readme-guidance.html.md.erb
+++ b/source/manuals/readme-guidance.html.md.erb
@@ -17,7 +17,7 @@ You should write READMEs in [Plain English](https://www.gov.uk/guidance/content-
 
 Avoid using terms like ‘just’ or ‘simply’ when writing your README. You should not assume your user has any prior knowledge of your project.
 
-If you want help writing a README, you can ask a technical writer in #tech-writers on Slack.
+If you want help writing a README, you can ask a technical writer in #technical-writing on UK Government Digital Slack Channel.
 
 ## Length of your README
 
