Removing references to snyk

--- a/source/manuals/programming-languages/python.html.md.erb
+++ b/source/manuals/programming-languages/python.html.md.erb
@@ -220,7 +220,7 @@ characteristics - they should be:
     Security issues are found in libraries, so it is important to choose libraries that are
     maintained and to ensure your team has a strategy to ensure security updates are installed
     without significant delay. The [how to manage third party software dependencies][the-mhclg-deps] section
-    gives further context and discusses tools that can help, such as [snyk.io][].
+    gives further context and discusses tools that can help.
 
 Your README should document an easy-to-follow process by which all your Python
 dependencies can be upgraded to get bug fixes and security fixes, without introducing
@@ -273,10 +273,6 @@ file otherwise.
 [the-mhclg-code-style-guides]: /manuals/programming-languages.html
 [slack-python]: https://gds.slack.com/messages/python
 [GPSG]: https://google.github.io/styleguide/pyguide.html
-
-[snyk.io]: https://snyk.io/
-[setup-deps]: https://docs.python.org/3.11/distutils/setupscript.html#relationships-between-distributions-and-packages
-[pip-tools]: https://pip-tools.readthedocs.io/en/stable/
 
 [PEP 8]: https://www.python.org/dev/peps/pep-0008/
 [PEP 440]: https://www.python.org/dev/peps/pep-0440/#direct-references
