--- a/source/standards/pull-requests.html.md.erb
+++ b/source/standards/pull-requests.html.md.erb
@@ -7,15 +7,17 @@ review_in: 12 months
 
 Pull requests (PRs) let you tell others about changes you've pushed to a branch in a repository on GitHub.
 
-## Why should you use pull requests?
+## Why might you use pull requests?
 
-We use [PRs][prs] at MHCLG to:
+We might use [PRs][prs] at MHCLG to:
 
 - enable [code review](/manuals/code-review-guidelines.html) from colleagues
 - provide a lightweight change management process
 - share responsibility for the code going live
 - spread knowledge and make others aware of changes
 - notify people outside the immediate group of reviewers
+
+Depending on the work flow of your project you might choose not to use pull requests. There are teams in the department that use [trunk-based development][trunk-based-development] instead of pull requests.
 
 ## Cautionary notes
 
@@ -110,3 +112,4 @@ Pull requests from members of the public should be addressed according to the gu
 [paul]: https://mastodon.me.uk/@boffbowsh
 [prs]: https://docs.github.com/en/github/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests
 [the-gds-way]: https://gds-way.digital.cabinet-office.gov.uk/standards/pull-requests.html#reviewing-prs-from-members-of-the-public
+[trunk-based-development]: https://trunkbaseddevelopment.com/
