--- a/source/standards/understanding-risks.html.md.erb
+++ b/source/standards/understanding-risks.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Understand the risks to your service
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-07-28
 review_in: 6 months
 ---
 
@@ -8,8 +8,7 @@ review_in: 6 months
 
 When you build, maintain or change your service, you must have a clear understanding of any associated risks because they will impact your service design and affect your users.
 
-You should work with [MHCLG Information Security IA] to design appropriate solutions for your service's risks. IA may need to obtain risk acceptance from your Senior Risk Owner (SRO).
-You can also work with the [COD Cyber Security Team] to get advice on the threats applicable to your service, and how to best mitigate them.
+You should work with [MHCLG Cyber Security team] to design appropriate solutions for your service's risks.
 
 The Service Manual has some recommendations which can reduce risk to your service, for example, how to:
 
@@ -20,9 +19,9 @@ The government security hub [security.gov.uk][securityhub] provides links to the
 
 ## Model security threats
 
-[Modelling threats][] can help you gain a clearer understanding of threats against your service. MHCLG uses [Attack Tree][] development workshops to model threats. Any workshops you run should cover all potential [attack vectors][].
+[Modelling threats][] can help you gain a clearer understanding of threats against your service. You can use [Attack Tree][] development workshops to model threats. Any workshops you run should cover all potential [attack vectors][].
 
-The Cabinet Office Cyber Security Team can help you carry out threat modelling, to help you:
+MHCLG Cyber Security Team can help you carry out threat modelling, to help you:
 
 * Understand threats that are unique to your service, helping you to adopt security conscious behaviours during its design, development and operation
 * Focus mitigation efforts on the threats that matter – that is, threats that pose the greatest risk to the normal operation of your service
@@ -31,14 +30,14 @@ The Cabinet Office Cyber Security Team can help you carry out threat modelling, 
 
 The team can also advise you on how threat model efficiently, should you decide to carry it out yourself or through a third party. 
 
-You will find more information on threat modelling on the [COD Cyber Security Team]'s google site.
+You will find more information on our security approaches in [Discover IT].
 
 ## Further Reading
 
 The [National Cyber Security Centre (NCSC)] provides guidance about cyber security. The Service Manual has advice about [securing your information] and [securing your cloud environment].
 
-[MHCLG Information Security IA]: https://sites.google.com/a/digital.cabinet-office.gov.uk/gds/directorates-and-groups/cto-and-ciso-office/information-security
-[COD Cyber Security Team]: https://sites.google.com/cabinetoffice.gov.uk/cybersecurity/our-services/threat-modelling
+[MHCLG Cyber Security team]: mailto:cybersecurity@communities.gov.uk
+[Discover IT]: https://mhclg.sharepoint.com/sites/MyIT2/SitePages/Paypal%20Hack.aspx
 [protect against fraud]: https://www.gov.uk/service-manual/technology/protecting-your-service-against-fraud
 [secure your information]: https://www.gov.uk/service-manual/technology/securing-your-information
 [Modelling threats]: /standards/threat-modelling.html#what-39-s-a-threat
