--- a/source/standards/web-application-firewall.html.md.erb
+++ b/source/standards/web-application-firewall.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Use a web application firewall (WAF)
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-07-28
 review_in: 6 months
 ---
 
@@ -14,15 +14,9 @@ Your continuous integration (CI) and continuous deployment (CD) pipelines should
 
 Combining a WAF with CI and CD tools reduces the risk from those tools, and provide enhanced layered security coverage for your service.
 
-You may also need to use a WAF because of:
-
-- MHCLG or departmental policies or standards
-- [Information Assurance (IA)](https://sites.google.com/a/digital.cabinet-office.gov.uk/gds/gds-operations/information-services/information-assurance) requirements to minimise risk
-- [Payment Card Industry Data Security Standard (PCI DSS)](https://www.pcisecuritystandards.org/) compliance
-
 ## When and how to use a WAF
 
-Set up a baseline of tests in your project’s alpha phase to identify any security vulnerabilities. As your service’s features grow, extend your tests to cover new vulnerabilities you identify. For example, through exercises like [application threat modelling](/standards/threat-modelling.html)
+Set up a baseline of tests in your project’s alpha phase to identify any security vulnerabilities. As your service’s features grow, extend your tests to cover new vulnerabilities you identify. For example, through exercises like [application threat modelling](/standards/threat-modelling.html).
 
 [Good development practices](/) should detect and fix common vulnerabilities before they reach production environments. Use your WAF to track digital services vulnerabilities an attacker could exploit.
 
@@ -61,23 +55,11 @@ When WAF alerts are raised, make sure you already have an incident policy in pla
 
 Review your WAF after each application change against the risks in the OWASP top 10 category rules.
 
-This should be similar to how you use an [IT Health Check (ITHC)](https://www.itgovernance.co.uk/it-health-check) to test and confirm the effectiveness of security controls in your environment.
-
-## Case study GOV.UK PaaS
-
-A [GOV.UK PaaS](https://www.cloud.service.gov.uk/) tenant uses a pattern with [Amazon Web Services (AWS) WAF](https://docs.aws.amazon.com/waf/latest/developerguide/waf-chapter.html) before forwarding traffic to their apps with enabled shield advance for extra protection.
-
-For more information read the proposed architecture for [implementing a DDoS-resistant Website using AWS Services](https://docs.aws.amazon.com/waf/latest/developerguide/tutorials-ddos-cross-service.html).
-
-## Case study GOV.UK Pay
-
-[GOV.UK Pay](https://www.payments.service.gov.uk/) uses a [NAXSI WAF (pay-nginx-proxy)](https://github.com/alphagov/pay-nginx-proxy) for its Nginx, forked from the Home Office.
-
-GOV.UK Pay operates under the governance of [PCI compliance and DSS point 6.6](https://www.pcisecuritystandards.org/pdfs/infosupp_6_6_applicationfirewalls_codereviews.pdf) which states the need for web application scanning.
+This should be similar to how you use a [Penetration Test](https://www.ncsc.gov.uk/guidance/penetration-testing) to test and confirm the effectiveness of security controls in your environment.
 
 ## Contact Cyber Security
 
-Contact the security architects in the MHCLG Cyber Security team by email at [cyber.security@digital.cabinet-office.gov.uk](mailto:cyber.security@digital.cabinet-office.gov.uk) or use the [#cyber-security-help Slack channel](https://gds.slack.com/messages/CCMPJKFDK/) for help and advice.
+Contact the security architects in the MHCLG Cyber Security team by email at [cybersecurity@communities.gov.uk](mailto:cybersecurity@communities.gov.uk).
 
 ## Further reading
 
