--- a/source/standards/monitoring.html.md.erb
+++ b/source/standards/monitoring.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: How to monitor your service
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-07-28
 review_in: 3 months
 ---
 
@@ -19,7 +19,7 @@ We recommend using a 3rd party service to monitor your service’s availability 
 
 Collecting metrics on the performance of your service is useful for [capacity planning][] and autoscaling. You should apply metrics-based monitoring to measure aggregated numerical data about your service and create dashboards to view metrics from your datasource, for example related to your infrastructure or application.
 
-For services hosted in AWS we recommend using [CloudWatch Metrics](https://docs.aws.amazon.com/AmazonCloudWatch/latest/monitoring/working_with_metrics.html)
+For services hosted in AWS we recommend using [CloudWatch Metrics](https://docs.aws.amazon.com/AmazonCloudWatch/latest/monitoring/working_with_metrics.html) unless you have more specific needs.
 
 [monitor the status of services]: https://www.gov.uk/service-manual/technology/monitoring-the-status-of-your-service
 [performance metrics]: https://www.gov.uk/service-manual/measuring-success/how-to-set-performance-metrics-for-your-service
