--- a/source/standards/technical-debt.html.md.erb
+++ b/source/standards/technical-debt.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: How to track technical debt
-last_reviewed_on: 2000-01-01
+last_reviewed_on: 2025-07-28
 review_in: 6 months
 ---
 
@@ -72,48 +72,8 @@ should review the impact.
 
 ## Process
 
-Items of Technical Debt should be recorded on a Trello board per product. See
-[GOV.UK's board](https://trello.com/b/oPnw6v3r/gov-uk-tech-debt) as an example.
-The product's technical leadership will triage these on a fortnightly basis,
-agree the assigned ratings and add them to the correct category. They should
-also review each item every 3 months.
+Items of Technical Debt should be recorded in your product's Jira project. The product's technical leadership will triage these on a regular basis, agree the assigned ratings and add them to the correct category. They should also review each item every 3 months.
 
-The product's technical leadership (for example, Technical Architects, Technical Leads, Lead
-Developers) should use these lists during conversations with Product and
-Delivery Managers when prioritising work. Technical debt existing on the
-register doesn’t necessarily mean it will be paid down at any point, only that
-GOV.UK is conscious of its existence and will take it into account in product
-decisions.
+The product's technical leadership (for example, Technical Architects, Technical Leads, Lead Developers) should use these lists during conversations with Product and Delivery Managers when prioritising work. Technical debt existing in Jira doesn’t necessarily mean it will be paid down at any point, only that MHCLG is conscious of its existence and will take it into account in product decisions.
 
-Tracking debt as it gets created will follow the same process, with a link to a
-Trello card on a team’s backlog for the story that created it. The debt review
-process doesn’t make decisions on whether the creation of the debt is the
-correct thing to do, that decision stays with the product team.
-
-If something is too small in scope to be included on the board, it should be
-recorded in the relevant repository's Github issues. Tech leads should review
-these regularly as part of prioritisation.
-
-## Example
-
-> ### Whitehall has its own upload management system
->
-> Cause: Whitehall’s system for handling uploads of PDFs, CSVs and images
-> from publishing users is different to the Asset Manager application used by
-> Specialist Publisher and others. This is due to it being developed in
-> isolation from another system.
->
-> Consequences:
->
-> - Inconsistent architecture
-> - Too closely coupled to physical disk
-> - Causes support tickets due to delay in processing attachments
->
-> Impact of debt: High due to confusion, operational restrictions and
-> support burden.
->
-> Effort to pay down: High due to the technical effort involved in changing
-> Whitehall to talk to Asset Manager, implementing missing features in Asset
-> Manager and migrating existing assets.
->
-> Overall rating: High
+Tracking debt as it gets created will follow the same process, with a link to a Jira ticket on a team’s backlog for the story that created it. The debt review process doesn’t make decisions on whether the creation of the debt is the correct thing to do, that decision stays with the product team.
